--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,7 @@ body {
   text-align: left;
   font-family: "Quicksand", sans-serif;
   font-size: 0.8em;
-  color: #000;
+  color: #11132D;
 }
 
 .column ul {
@@ -73,7 +73,7 @@ body {
 
 .column p {
   font-size: 0.8em;
-  color: #000;
+  color: #11132D;
   text-align: left;
   font-family: "Quicksand", sans-serif;
 }
